--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h1>Home</h1>
+  <h1>Home / Inicio</h1> 
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto officia excepturi nesciunt autem minima reiciendis iure possimus nulla dolore, reprehenderit voluptatem hic inventore consectetur aspernatur. Veritatis corporis minus reiciendis quae?</p>
 
 </body>
