Agregando Readme y modificando index

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <h1>Home</h1>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto officia excepturi nesciunt autem minima reiciendis iure possimus nulla dolore, reprehenderit voluptatem hic inventore consectetur aspernatur. Veritatis corporis minus reiciendis quae?</p>
 
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente debitis, temporibus aspernatur veniam esse libero cum labore hic nesciunt excepturi laborum ex dignissimos autem dolorum expedita dolore omnis quia quibusdam?</p>
 </body>
 </html>
